2020-06-04  Mark Wielaard  <mark@klomp.org>

	* dwelf_elf_e_machine_string.c (dwelf_elf_e_machine_string):
	Rename EM_ARC_COMPACT2 to EM_ARCV2.

2019-08-12  Mark Wielaard  <mark@klomp.org>

	* libdwelf.h (dwelf_elf_begin): Update documentation.
	* dwelf_elf_begin.c (dwelf_elf_begin): Don't suppress ELF_K_NONE.
	Mark old and new version.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libdwelf_a_SOURCES): Add dwelf_elf_e_machine_string.c.
	* libdwelf.h (dwelf_elf_e_machine_string): Define new function.
	* dwelf_elf_e_machine_string.c: New file.

2018-10-21  Mark Wielaard  <mark@klomp.org>

	* libdwelf.h (dwelf_elf_begin): Add function declaration.
	* dwelf_elf_begin.c: New file.
	* Makefile.am (libdwelf_a_SOURCES): Add dwelf_elf_begin.c.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* dwelf_elf_gnu_build_id.c (find_elf_build_id): Check p_align to
	set ELF type.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* dwelf_strtab.c: Remove sys/param.h include.
	(MIN): Remove definition.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libdwelf_a_SOURCES): Add dwelf_strtab.c.
	* dwelf_strtab.c: New file.
	* libdwelf.h (Dwelf_Strtab): New typedef.
	(Dwelf_Strent): Likewise.
	(dwelf_strtab_init): New function.
	(dwelf_strtab_add): Likewise.
	(dwelf_strtab_add_len): Likewise.
	(dwelf_strtab_finalize): Likewise.
	(dwelf_strent_off): Likewise.
	(dwelf_strent_str): Likewise.
	(dwelf_strtab_free): Likewise.

2015-10-28  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (libdwelf_a_SOURCES): Add
	dwelf_scn_gnu_compressed_size.c.
	* dwelf_scn_gnu_compressed_size.c: Likewise.
	* libdwelf.h (dwelf_scn_gnu_compressed_size): New declaration.

2015-10-14  Chih-Hung Hsieh  <chh@google.com>

	* dwelf_elf_gnu_build_id.c (find_elf_build_id): Move nested function
	'check_notes' to file scope.

2014-11-14  Mark Wielaard  <mjw@redhat.com>

	* dwelf_elf_gnu_debuglink.c (dwelf_elf_gnu_debuglink): Check d_buf
	is not NULL.
